Closed Bug 1514538 Opened 6 years ago Closed 6 years ago

SVGMatrix and DOMMatrix are not interchangeable in Path2D.addPath

Categories

(Core :: SVG, defect, P3)

64 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla70
Webcompat Priority ?
Tracking Status
firefox70 --- fixed

People

(Reporter: vitalyx, Assigned: saschanaz)

Details

(Keywords: compat, parity-chrome, Whiteboard: [webcompat][wptsync upstream])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36 Steps to reproduce: const p1 = new Path2D(); const p2 = new Path2D(); const m = new DOMMatrix(); p1.addPath(p2, m); Actual results: TypeError: Argument 2 of Path2D.addPath does not implement interface SVGMatrix. Expected results: Should have worked with no error. Both SVGMatrix and DOMMatrix have the same constructor and are interchangeable here in Chrome and Safari, but not Firefox.
Component: Untriaged → SVG
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Whiteboard: [webcompat]

Migrating Webcompat whiteboard priorities to project flags. See bug 1547409.

Webcompat Priority: --- → ?

See bug 1547409. Migrating whiteboard priority tags to program flags.

Assignee: nobody → saschanaz

Adds SVGMatrix toJSON to make it compatible with DOMMatrix2DInit.

Pushed by bzbarsky@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/efb3a42f50dc Support DOMMatrix2DInit for addPath r=bzbarsky
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/17857 for changes under testing/web-platform/tests
Whiteboard: [webcompat] → [webcompat][wptsync upstream]
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: