Bug 1514538 - Support DOMMatrix2DInit for addPath r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D38054